@@ -274,38 +274,35 @@ package Dist::Zilla::Plugin::AlienBase::Doc;
 __DATA__
 
 __[ __SYNOPSIS_LIBRARY__ ]__
+In your Makefile.PL:
+
+ use ExtUtils::MakeMaker;
+ use Alien::Base::Wrapper ();
+ 
+ WriteMakefile(
+   Alien::Base::Wrapper->new('{{ $class }}')->mm_args2(
+     # MakeMaker args
+     NAME => 'Kafka::Librd',
+     ...
+   ),
+ );
+
 In your Build.PL:
 
  use Module::Build;
- use {{ $class }};
+ use Alien::Base::Wrapper qw( {{ $class }} !export );
+
  my $builder = Module::Build->new(
    ...
    configure_requires => {
      '{{ $class }}' => '{{ $version }}',
      ...
    },
-   extra_compiler_flags => {{ $class }}->cflags,
-   extra_linker_flags   => {{ $class }}->libs,
+   Alien::Base::Wrapper->mb_args,
    ...
  );
  
  $build->create_build_script;
-
-In your Makefile.PL:
-
- use ExtUtils::MakeMaker;
- use Config;
- use {{ $class }};
- 
- WriteMakefile(
-   ...
-   CONFIGURE_REQUIRES => {
-     '{{ $class }}' => '{{ $version }}',
-   },
-   CCFLAGS => {{ $class }}->cflags . " $Config{ccflags}",
-   LIBS    => [ {{ $class }}->libs ],
-   ...
- );
 
 __[ __SYNOPSIS_FFI__ ]__
 In your L<FFI::Platypus> script or module:
