@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - [AlienBase::Doc] uses Alien::Base::Wrapper instead of manual
+    intervention.
 
 0.29      2019-05-22 08:13:23 -0400
   - bump requirement for clean_install to AB 1.74 to avoid
